src/test/fail/invalid_class_name.ly
###
SyntaxError: 'A' is not a valid class name (too short).
Where: File "test/fail/invalid_class_name.ly" at line 6
###

class A() {}
